--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.youmeek</groupId>
+    <groupId>cn.jason-li</groupId>
     <artifactId>ssm</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
@@ -10,7 +10,7 @@
     <description>
         为了方便以后的一些问题的讲解特地准备一个最精简的 SpringMVC+Spring+Mybatis 框架整合，方便以后的一些问题的演示
     </description>
-    <url>http://code.YouMeek.com</url>
+    <url>http://www.jason-li.cn</url>
 
     <!-- 集中定义公用的依赖版本号 -->
     <!--版本变量设置 start-->
